--- a/src/style.css
+++ b/src/style.css
@@ -7,12 +7,12 @@
         @apply relative min-h-full flex flex-col flex-grow text-gray-900;
     }
 
-    h1 { @apply text-3xl my-8; }
-    h2 { @apply text-2xl my-6; }
-    h3 { @apply text-xl my-4; }
-    h4 { @apply text-lg my-3; }
-    h5 { @apply text-base my-2 font-bold; }
-    h6 { @apply text-sm my-2 font-bold; }
+    h1, .h1 { @apply text-3xl my-8; }
+    h2, .h2 { @apply text-2xl my-6; }
+    h3, .h3 { @apply text-xl my-4; }
+    h4, .h4 { @apply text-lg my-3; }
+    h5, .h5 { @apply text-base my-2 font-bold; }
+    h6, .h6 { @apply text-sm my-2 font-bold; }
     p { @apply text-base my-3; }
     label { @apply font-bold text-sm my-2; }
 }
